--- a/Drinks_Menu/drinks.css
+++ b/Drinks_Menu/drinks.css
@@ -54,6 +54,9 @@ html {
     top: 0;
     z-index: 3;
   }
+    .dropdown-menu {
+      position: absolute !important;
+    }
   
   .navbar.scrolled {
     background-color: rgba(17, 17, 17, 0.829) !important;
@@ -392,6 +395,11 @@ html {
   text-align: center;
   font-size: 14px;
   color: #aaa;
+}
+@media (max-width: 768px) {
+  .new-footer h5::after {
+    background-color: var(--grey);
+  }
 }
 
 /*End Footer*/
