--- a/Home/home.css
+++ b/Home/home.css
@@ -64,7 +64,9 @@ body {
 .navbar-brand span {
     color: #c7ae38;
 }
-
+.dropdown-menu {
+    position: absolute !important;
+}
 .nav-item {
     margin-left: 15px;
     font-size: 18px;
@@ -407,6 +409,7 @@ body {
 
     .story .story_text {
         margin-bottom: 45px;
+        padding: 2px;
     }
 
     .story .story_text p {
@@ -674,6 +677,11 @@ body {
     width: 50px;
     height: 2px;
     background-color: var(--yellow);
+}
+@media (max-width: 768px) {
+.new-footer h5::after {
+   background-color: var(--grey); 
+}
 }
 
 .footer-content p {
